--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "jose": "^5.2.4",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "react": "^18",
