--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.3",
-    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.1",
+    "sharp": "^0.33.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
