--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.3",
-    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -33,7 +33,7 @@
     "fuse.js": "^7.0.0",
     "jose": "^5.2.4",
     "lucide-react": "^0.338.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
