--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
